--- a/28 Subat/Ödev/css/main.css
+++ b/28 Subat/Ödev/css/main.css
@@ -12,7 +12,7 @@ a {
 
 #sc-1 {
     width: 100%;
-    height: 100vh;
+    height: 600px;
 }
 
 #sc-1 header nav {
@@ -64,9 +64,10 @@ a {
 #sc-1 #bg-1 {
     width: 100%;
     position: absolute;
+    object-fit: cover;
     z-index: -10;
     height: 100%;
-    top: 0px;
+    top: 0;
 }
 
 /* sc-1 article */
@@ -74,9 +75,9 @@ a {
 #sc-1 #box-1 {
 
     margin: 0 auto;
-    margin-top: 32vh;
+    margin-top: 20vh;
     width: 50%;
-    height: 15rem;
+    height: 12rem;
     background: #3A3939;
     opacity: 79%;
 }
@@ -121,52 +122,59 @@ a {
     
 }
 
-#sc-2 h4 {
+#sc-2 #Kurslar-Title {
     padding-top: 3rem;
 }
 
-#sc-2 #container-1 {
+#sc-2 #Kurslar {
     width: 100%;
     justify-content: center;
     margin-top: 4rem;
 }
 
-#sc-2 #container-1 img {
+#sc-2 #Kurslar img {
     width: 5.5rem;
 }
 
-#sc-2 #container-1 #box-2 img {
+#sc-2 #Kurslar #box-2 img {
     width: 3.2rem;
     margin: 18px;
 }
 
-#sc-2 #container-1 #box-2 {
+#sc-2 #Kurslar div:hover {
     box-shadow: 5px 5px 150px grey;
 }
 
 /* Dersler */
-#sc-2 h1 {
+#sc-2 #Dersler-Title {
     margin-top: 4rem;
     font-size: 33px;
 }
 
-#sc-2 #container-2 {
+#sc-2 #Dersler {
     margin: 0 auto;
     justify-content: space-evenly;
     margin-top: 50px;
 }
 
-#sc-2 #container-2 #box-6 {
+#sc-2 #Dersler #box-6 {
     width: 18rem;
     height: 360px;
+    transition: 1s;
 }
 
-#sc-2 #container-2 img {
+#sc-2 #Dersler #box-6:hover {
+    width: 20rem;
+    height: 390px;
+    transition: 1s;
+}
+
+#sc-2 #Dersler img {
     width: 100%;
     padding: 15px;
 }
 
-#sc-2 #container-2 #span-1 {
+#sc-2 #Dersler #span-1 {
     padding: 10px;
     border-radius: 40px;
     color: white;
@@ -175,44 +183,44 @@ a {
     bottom: 240px;
 }
 
-#sc-2 #container-2 #texts p {
+#sc-2 #Dersler #texts p {
     margin-left: 20px;
     font-size: 15px;
     font-weight: 700;
 }
 
-#sc-2 #container-2 #texts #line {
+#sc-2 #Dersler #texts #line {
     width: 80%;
     height: 1px;
     margin-left: 20px;
     margin-top: 10px;
 }
 
-#sc-2 #container-2 #texts i {
+#sc-2 #Dersler #texts i {
     margin-left: 20px;
     margin-top: 10px;
     font-size: 13px;
     color: grey;
 }
 
-#sc-2 #container-2 #texts i span {
+#sc-2 #Dersler #texts i span {
     color: grey;
     font-size: 12px;
     font-weight: 600;
     margin: 10px;
 }
 
-#sc-2 #container-2 #box-6 p,#sc-2 #container-2 #box-6 i {
+#sc-2 #Dersler #box-6 p,#sc-2 #container-2 #box-6 i {
     font-size: 18px;
 }
 
-#sc-2 #container-2 #box-6 button {
+#sc-2 #Dersler #box-6 button {
     margin-top: 30px;
     width: 120px;
     height: 45px;
 }
 
-#sc-2 #container-2 #box-6 #span-1 {
+#sc-2 #Dersler #box-6 #span-1 {
     bottom: 300px;
     right: 150px;
 }
@@ -224,7 +232,7 @@ a {
     padding: 15px;
     border-width: 1px;
     margin-left: 43%;
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 15px;
     font-weight: 600;
     width: 200px;
@@ -232,7 +240,7 @@ a {
 
 /* section 3 */
 #sc-3 {
-    background-image: url(/images/resim5.png);
+    background-image: url(/Ödev/images/resim5.png);
     background-repeat: no-repeat;
     height: 500px;
     background-size: cover;
@@ -248,6 +256,7 @@ a {
     top: 100px;
     align-items: center;
     flex-direction: column;
+    z-index: 10;
 }
 
 #sc-3 #box-1 img {
@@ -264,7 +273,7 @@ a {
 
 /* Section 4 */
 #sc-4 {
-    background-image: url(/images/resim7.png);
+    background-image: url(/Ödev/images/resim7.png);
     background-repeat: no-repeat;
     height: 400px;
     background-size: cover;
@@ -275,10 +284,12 @@ a {
     height: 100%;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 10;
 }
 
 #sc-4 #container-1 div {
-    margin: 40px;
+    margin: 20px;
 }
 
 #sc-4 #container-1 div p {
@@ -300,7 +311,7 @@ a {
 /* Footer */
 footer {
     width: 100%;
-    height: 24rem;
+    height: 100%;
     background-color: #141414;
     opacity: 0.9;
     color: #615E5E;
@@ -317,6 +328,7 @@ footer #container-1 #box-1 {
     align-items: center;
     text-align: center;
     margin-top: 10px;
+    justify-content: center;
 }
 
 footer #container-1 #box-1 i {
@@ -346,6 +358,7 @@ footer .line {
     height: 2px;
     background-color: #3A3939;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 footer #container-1 #box-2 {
@@ -375,3 +388,12 @@ footer #container-1 #box-2 .container #text-2 {
     color: white;
 }
 
+/* overlay */
+.overly {
+    background-color: black;
+    opacity: 0.5;
+    width: 100%;
+    height: 900px;
+    position: absolute;
+    top: 1528px;
+}
