--- a/28 Subat/Ödev/css/main.css
+++ b/28 Subat/Ödev/css/main.css
@@ -15,6 +15,10 @@ a {
     height: 600px;
 }
 
+#sc-1 header #mobile-nav {
+    display: none;
+}
+
 #sc-1 header nav {
     padding-top: 10px;
     font-size: 1rem;
@@ -141,7 +145,7 @@ a {
     margin: 18px;
 }
 
-#sc-2 #Kurslar div:hover {
+#sc-2 #Kurslar .box:hover {
     box-shadow: 5px 5px 150px grey;
 }
 
@@ -231,16 +235,26 @@ a {
     color: white;
     padding: 15px;
     border-width: 1px;
-    margin-left: 43%;
+    align-self: center;
     margin-top: 20px;
     font-size: 15px;
     font-weight: 600;
     width: 200px;
+    text-align: center;
 }
+
+#sc-2 #btn-div {
+    justify-content: center;
+}
+
+#sc-2 #sol-ok,#sc-2 #sag-ok {
+    display: none;
+}
+
 
 /* section 3 */
 #sc-3 {
-    background-image: url(/Ödev/images/resim5.png);
+    background-image: url(./images/resim5.png);
     background-repeat: no-repeat;
     height: 500px;
     background-size: cover;
@@ -248,7 +262,7 @@ a {
 
 #sc-3 #box-1 {
     background-color: white;
-    width: 500px;
+    width: 50%;
     height: 300px;
     margin: 0 auto;
     padding: 10px;
@@ -257,6 +271,8 @@ a {
     align-items: center;
     flex-direction: column;
     z-index: 10;
+    border-radius: 10px;
+    overflow: auto;
 }
 
 #sc-3 #box-1 img {
@@ -273,7 +289,7 @@ a {
 
 /* Section 4 */
 #sc-4 {
-    background-image: url(/Ödev/images/resim7.png);
+    background-image: url(./images/resim7.png);
     background-repeat: no-repeat;
     height: 400px;
     background-size: cover;
@@ -289,7 +305,7 @@ a {
 }
 
 #sc-4 #container-1 div {
-    margin: 20px;
+    margin: 3%;
 }
 
 #sc-4 #container-1 div p {
@@ -341,7 +357,7 @@ footer #container-1 #box-1 #span-1 i {
 }
 
 footer #container-1 #box-1 #span-1 {
-    margin-left: 6rem;
+    margin-left: 15%;
 }
 
 footer #container-1 #box-1 span #text {
@@ -349,7 +365,7 @@ footer #container-1 #box-1 span #text {
 }
 
 footer #container-1 #box-1 #text-2 {
-    margin-left: 10rem;
+    margin-left: 10%;
     margin-right: 10px;
 }
 
@@ -373,7 +389,7 @@ footer #container-1 #box-2 .container i {
 footer #container-1 #box-2 .container {
     flex-direction: column;
     text-align: center;
-    margin: 50px;
+    margin: 10%;
     margin-top: 70px;
 }
 
