--- a/28 Subat/Englitastic/css/global.css
+++ b/28 Subat/Englitastic/css/global.css
@@ -8,6 +8,13 @@
     color: white;
     font-size: 15px;
     font-weight: 700;
+    border-width: 0px;
+}
+
+.btn:hover {
+   
+    background-color: yellow;
+    color: black;
 }
 
 .btn-2 {
@@ -16,9 +23,14 @@
     background-color: red;
     color: white;
     border-radius: 10px;
-    border-width: 2px;
+    border-width: 1px;
     margin-top: 10px;
     margin-left: 30px;
+}
+
+.btn-2:hover {
+    background-color: rgb(114, 1, 1);
+    cursor: pointer;
 }
 
 .btn:hover {
