--- a/21 Mart/Arex Sigorta/Css/main.css
+++ b/21 Mart/Arex Sigorta/Css/main.css
@@ -586,6 +586,7 @@ nav .dropdown-1 .dropdown-item-1 {
     left: 0;
     width: 200px;
     background-color: white;
+    z-index: 10;
 }
 
 nav .dropdown-1 .dropdown-item-1 ul {
