--- a/21 Mart/Arex Sigorta/Css/main.css
+++ b/21 Mart/Arex Sigorta/Css/main.css
@@ -8,6 +8,22 @@ a {
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #063481;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
 .bg{
     background-color: #DFEBF3;
     width: 100%;
@@ -21,19 +37,20 @@ ul {
     background-color: black;
     opacity: 80%;
     width: 100%;
-    height: 999999999px;
+    height: 100%;
     position: absolute;
+    top: 0;
     z-index: 1;
     display: none;
+    overflow: hidden;
 }
 
 nav {
-    position: fixed !important;
     width: 100%;
     top: 0;
-    z-index: 30;
+    z-index: 30 !important;
     background-color: white;
-    box-shadow: 0 1px 25px 1px gray;
+    transition: 0.5s;
 }
 
 nav a {
@@ -49,6 +66,15 @@ nav button {
     border-radius: 10px;
     color: white;
     font-size: 13px;
+    z-index: 100;
+}
+
+nav .container img {
+    z-index: 100;
+}
+
+nav .container button {
+    z-index: 100;
 }
 
 .nav-a:hover {
@@ -60,36 +86,26 @@ nav .hidden-box {
     position:absolute;
     overflow: hidden;
     left: 0;
-    z-index: 10;
+    z-index: 10 !important;
     padding: 30px;
-    padding-top: 20px;
+    padding-top: 10px;
     display: none;
+    transform: translateZ(-100px);
 }
 
-nav .urunler-grid {
+nav .hidden-box .grid {
+    position: relative !important;
+    z-index: 10 !important;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    
     grid-gap: 40px;
     width: 100%;
-    height: 100%;
     background-color: white;
     padding: 30px;
     border-end-end-radius: 20px;
     border-end-start-radius: 20px;
     flex-wrap: wrap;
     cursor: default;
-}
-
-nav .urunler-box .box-1 {
-    display: flex;
-    background-color: #09317C;
-    padding: 20px 40px;
-    color: white;
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 20px;
-    margin-top: 50px;
 }
 
 nav .hidden-box ul {
@@ -104,13 +120,63 @@ nav .hidden-box ul li h6 {
     cursor: text;
 }
 
-nav .hidden-box ul li a {
-    color: gray;
+nav .hidden-box a {
+    color: #15324b;
 }
 
-nav .hidden-box ul li a:hover {
+nav .hidden-box a:hover {
     text-decoration: underline;
-    color: gray;
+    color: #15324b;
+}
+
+/* Urunler Menu */
+nav .urunler-box .box-1 {
+    display: flex;
+    background-color: #09317C;
+    padding: 20px 40px;
+    color: white;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 20px;
+    margin-top: 50px;
+}
+
+nav .urunler-box ul li {
+    margin: 10px 0;
+}
+
+
+/* Kurumsal Menu */
+.kurumsal-box {
+    left: 120px !important;
+}
+
+.kurumsal-box .grid,.acente-box .grid, .hasarYardım-box .grid {
+    grid-row-gap: 20px !important;
+}
+
+
+/* Acente Menu */
+.acente-box {
+    left: 380px !important;
+}
+
+.acente-box .grid {
+    grid-template-columns: auto auto !important;
+}
+
+/* Hasar Yardım Menu */
+.hasarYardım-box {
+    left: 120px !important;
+}
+
+/* Keşfet Menu */
+.kesfet-box {
+    left: 50% !important;
+}
+
+.kesfet-box .grid {
+    grid-template-columns: auto auto !important;
 }
 
 
@@ -119,7 +185,7 @@ nav .hidden-box ul li a:hover {
     width: 80%;
     margin: 0 auto;
     display: flex;
-    margin-top: 30px;
+    margin-top: 60px;
 }
 
 .banner .div-1 {
@@ -679,16 +745,7 @@ nav .dropdown-1 .dropdown-item-1 ul {
         list-style-type: none;
     }
 
-    
 }
-
-
-
-#carouselExampleIndicators {
-    display: none;
-}
-
-
 
 
 @media (max-width:1090px) {
