--- a/21 Mart/Arex Sigorta/Css/main.css
+++ b/21 Mart/Arex Sigorta/Css/main.css
@@ -708,36 +708,50 @@ footer .box-2 img:last-child {
 
 
 /* Dropdown */
-
-nav .dropdown-1 {
-    position: relative;
-}
-
-nav .dropdown-1,.dropdown-1 .dropdown-item-1 {
+nav .dropdown-1{
     display: none;
-}
-
-nav .dropdown-1 .dropdown-item-1 {
-    position: absolute;
-    left: 0;
-    width: 80vh;
     background-color: white;
-    z-index: 10;
+    width: 100%;
+    height: 100%;
 }
 
-nav .dropdown-1 .dropdown-item-1 ul {
-    margin: 0;
-    padding: 20px 20px;
+nav .dropdown-1 ul {
+    margin-left: 30px;
+    padding: 0;
+}
+
+nav .dropdown-1 ul li {
+    font-size: 20px;
+    padding: 20px 0;
+}
+
+nav .dropdown-1 button {
+    width: 100%;
+    height: 60px;
+    border-radius: 0;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: start;
+    padding-left: 30px;
+}
+
+nav .dropdown-button {
+    display: none;
 }
 
 
 @media (max-width:770px) {
-    
+
+    nav .container {
+        width: 93%;
+        max-width: none;
+    }
+
     nav .nav-a,nav .btn-1 {
         display: none;
     }
 
-    nav .dropdown-1 {
+    nav .dropdown-button {
         display: block;
     }
 
